# katapy

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
katapy/: fizzbuzz.py
katapy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/katapy/: main.py
src/katapy/simple/: fizzbuzz.py
tests/: test_fizzbuzz.py  test_katapy.py
tests/simple/: test_fizzbuzz.py
