[tool.poetry]
name = "katapy"
version = "0.1.0"
description = ""
authors = ["Ethan Hill <5614778+ethnhll@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
coverage = "^5.2.1"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
